working local-upload example

--- a/uploader/templates/uploader/index.html
+++ b/uploader/templates/uploader/index.html
@@ -46,11 +46,11 @@
         $("#fine-uploader").fineUploader({
             debug: true,
             request: {
-                endpoint: '/uploader/'
+                endpoint: '/upload/'
             },
             deleteFile: {
                 enabled: true,
-                endpoint: '/uploader/'
+                endpoint: '/upload/'
             },
             retry: {
                enableAuto: true
