clean up static folder for FineUpload stuff

--- a/s3uploader/templates/s3uploader/index.html
+++ b/s3uploader/templates/s3uploader/index.html
@@ -4,11 +4,11 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="{% static 's3uploader/fineuploader-4.0.3.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/fineuploader-4.0.3.min.css' %}" />
 
     <script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="{% static 'uploader/js/jquery.fineuploader-4.0.3.min.js' %}"></script>
-    <script src="{% static 's3uploader/s3.jquery.fineuploader-4.0.3.js' %}"></script>
+    <script src="{% static 'js/jquery.fineuploader-4.0.3.min.js' %}"></script>
+    <script src="{% static 'js/s3.jquery.fineuploader-4.0.3.min.js' %}"></script>
     <script type="text/template" id="qq-template">
         <div class="qq-uploader-selector qq-uploader">
             <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
