fix S3 delete code

--- a/s3uploader/templates/s3uploader/index.html
+++ b/s3uploader/templates/s3uploader/index.html
@@ -61,7 +61,7 @@
             },
             deleteFile: {
                 enabled: true, // defaults to false
-                endpoint: '/s3handler'
+                endpoint: '/s3/delete'
             },
             retry: {
                 enableAuto: true // defaults to false
