--- a/uploader/templates/uploader/index.html
+++ b/uploader/templates/uploader/index.html
@@ -65,5 +65,16 @@
 
 <body>
     <div id="fine-uploader"> </div>
+
+{% if image_list %}
+    <ul>
+    {% for image in image_list %}
+        <li><a href="/images/{{ image.id }}/">{{ image.title }}</a></li>
+    {% endfor %}
+    </ul>
+{% else %}
+    <p>No images are available.</p>
+{% endif %}
+
 </body>
 </html>
